fixed margin issues that gave extra space on mobile view

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -80,21 +80,19 @@ a{
     font-weight: 400;
     color: rgb(255, 243, 243);
     background-color: #121212;
+    width: 100vw;
     max-width: 1300px;
     margin: 0 auto;
 }
 
 .header{
-    // border: solid red 1px;
     display: flex;
     margin: 20px;
     .logo-wrapper{
-        // border: pink solid 1px;
         width: 75px;
         height: 75px;
         align-self: center;
         img{
-            // border: solid yellow 1px;
             height: 100%;
             width: 100%;
         }
@@ -104,7 +102,6 @@ a{
 
     }
     .header-wrapper{
-        // border: yellow 1px solid;
         display: flex;
         height: fit-content;
         h1{
@@ -120,12 +117,10 @@ a{
 }
 
 .info{
-    // border: solid yellow 1px;
     margin: 20px;
     display: flex;
     .info-image-wrapper{
         width: 80%;
-        // border: solid red 1px;
         img{
             width: 100%;
             height: 100%;
@@ -133,7 +128,6 @@ a{
         }
     }
     .info-text-wrapper{
-        // border: solid blue 1px;
         width: 20%;
         padding: 0 20px 0 20px;
         h4{
@@ -154,20 +148,17 @@ a{
     }
 }
 
-.project-outside{
-    // border: solid blue 1px;
+.project{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     gap: 20px;
     margin: 20px;
 
-    .project-wrapper{
+    .image-wrapper{
         display: grid;
-        justify-items: center;
         position: relative;
+        justify-items: center;
         cursor: pointer;
-
-        .image-wrapper{
             img{    
                 width: 100%;
                 height: 100%;
@@ -177,26 +168,23 @@ a{
                 position: absolute;
                 display: grid;
                 align-content: center;
-                top: 0;
-                width: 100%;
-                height: 100%;
-                text-align: center;
-                height: 100%;
+                top:40%;
+                width: 80%;
                 z-index: 1;
                 font-size: 1.35em;
+                text-align: center;
                 h4{
                   color: white;
                   text-shadow: .5px .5px .5px black;
                 }
             }
+    }
+    .image-wrapper:hover{
+        .image-title{
+          z-index: 1;
         }
-        .image-wrapper:hover{
-            .image-title{
-              z-index: 1;
-            }
-            img{
-              opacity: .65;
-            }
+        img{
+          opacity: .65;
         }
     }
 }
@@ -246,7 +234,7 @@ a{
         }
     }
 
-    .info{
+        .info{
         flex-wrap: wrap;
         .info-image-wrapper{
             width: 100%;
